--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "react-router-dom": "^6.29.0"
   }
 }
