--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-router-dom": "^6.29.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,5 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "jest": "^27.5.1",
-    "react-router-dom": "^6.29.0"
   }
 }
